--- a/styles/style.css
+++ b/styles/style.css
@@ -1,21 +1,28 @@
 /* ===== ШАПКА ===== */
 
+.page {
+  max-width: 1100px;      
+  margin: 0 auto;
+  padding: 0 24px;
+}
+
 .header {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  padding: 92px 24px;
+  padding: 92px 0;
 }
 
 .header_menu {
   justify-self: start;
+  
 }
 
 .header_links_list {
   display: flex;
-  gap: 32px;
+  gap: 34px;
   list-style: circle;
-  padding: 0;
+  padding-left: 33px;
   margin: 0;
 }
 
@@ -58,16 +65,18 @@
   font-style: normal;
   display: flex;
   flex-direction: column;
-  gap: 4px;
-}
+  }
 
 .header_address {
   justify-self: end;
+  text-align: left;
+  margin-right: 60px;
 }
 
 .address_link {
   color: inherit;
-  text-decoration: none;
+  text-decoration: underline;
+  text-underline-offset: 3px;
 }
 
 .address_text {
@@ -84,7 +93,8 @@
   background-position: center;
   color: #fff;
   text-transform: uppercase;
-  min-height: 757px;
+  max-height: 757px;
+  
 }
 
 .overlay {
@@ -97,8 +107,9 @@
 .cover_title {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  padding: 165px 50px 147px;
+  align-items: center;
+  gap: 40px;
+  padding: 165px 0 147px;
   position: relative;
   z-index: 1;
 }
@@ -115,16 +126,19 @@
 }
 
 .cover_text_left {
-  align-self: flex-start;
+  transform: translateX(-340px);
+  margin-top: 10px;
 }
 
 .cover_text_center {
-  align-self: center;
+  transform: translateX(20px);
+  margin-top: -6px;
 }
 
 .cover_text_right {
-  align-self: flex-end;
-  text-align: right;
+  transform: translateX(325px);
+  text-align: left;
+  margin-top: -6px;
 }
 
 
@@ -132,10 +146,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 50px 55px 78px;
+  padding: 0 0 55px 0;
   gap: 79px;
   position: relative;
   z-index: 1;
+  margin-top: -30px;
 }
 
 .cover_description_text {
@@ -143,6 +158,7 @@
   font-weight: 400;
   line-height: 28px;
   word-spacing: 18px;
+  padding-left: 30px;
 }
 
 .bet_button {
@@ -156,18 +172,20 @@
   font-weight: 500;
   text-transform: uppercase;
   cursor: pointer;
+  margin-right: 26px;
+  margin-top: -5px;
 }
 
 /* ===== ЛОТЫ ===== */
 
 .lots {
    max-width: 1052px;
-  padding: 179px 24px 0;
+  padding: 179px 0 0;
   margin: 0 auto;
 }
 
 .lots_heading {
-  margin: 0 0 26px 0;
+  margin: 0 0 26px 42px;
   font-size: 40px;
   font-weight: 700;
   text-transform: uppercase;
@@ -175,17 +193,17 @@
 
 .lots_card_list {
   display: flex;
-  
   list-style: none;
   gap: 25px;
-  margin: 0;
+  margin: 28px 0 0;
   padding: 0; 
+  flex-wrap: wrap;
 }
 
 .lots_card_list_item {
   max-width: 334px;
   flex: 0 0 334px; 
-  min-height: 563px;
+  min-height: 590px;
 }
 
 .card_link {
@@ -240,7 +258,8 @@
 
 .lots_look_more_link {
   display: block;
-  margin: 30px 0 0 64px;
+  margin: 33px 0 0 64px;
+  margin-left: 41px;
   font-size: 20px;
   font-weight: 400;
   color: #000;
@@ -252,7 +271,7 @@
 
 .about {
   margin-top: 148px;
-  padding: 0 24px 0;
+  padding: 0;
   display: grid;
   grid-template-columns: 334px 1fr;
   column-gap: 25px;
@@ -269,6 +288,8 @@
   width: 240px;
   height: 240px;
   display: flex;
+  margin-left: 50px;
+  margin-top: 4px;
   justify-content: center;
   align-items: center;
 }
@@ -285,9 +306,10 @@
 }
 
 .about_title {
-  margin: 0;
+  margin: 6px 0 0 2px;
   font-size: 40px;
   font-weight: 700;
+  text-transform: uppercase;
 }
 
 .about_text {
@@ -296,6 +318,7 @@
   gap: 25px;
   font-size: 20px;
   line-height: 24px;
+  margin-top: 73px;
 }
 
 /* ===== ПОДВАЛ ===== */
@@ -303,13 +326,13 @@
 .footer {
   display: grid;
   grid-template-columns: auto 1fr auto;
-  padding: 180px 50px 88px;
+  padding: 180px 0 88px;
   column-gap: 140px;
   align-items: flex-start;
 }
 
 .footer_address {
-  padding-left: 0;
+  margin-left: 30px;
 }
 
 .footer_menu_list {
@@ -324,7 +347,7 @@
   font-size: 18px;
   text-decoration: underline;
   text-underline-offset: 3px;
-}
+  }
 
 .footer_menu_link_active {
   text-decoration: none;
@@ -334,7 +357,7 @@
   display: flex;
   list-style: none;
   gap: 48px;
-  margin: 0;
+  margin: 0 23px 0 0;
   padding: 0;
 }
 
