--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,14 @@
 /* ===== ШАПКА ===== */
 
-.page {
-  max-width: 1100px;      
-  margin: 0 auto;
-  padding: 0 24px;
-}
+
 
 .header {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  padding: 92px 0;
-}
+  padding: 92px 48px 96px;
+  height: 293px;
+  }
 
 .header_menu {
   justify-self: start;
@@ -20,11 +17,10 @@
 
 .header_links_list {
   display: flex;
-  gap: 34px;
+  gap: 33px;
   list-style: circle;
-  padding-left: 33px;
-  margin: 0;
-}
+  
+ }
 
 .header_links_list_item {
   font-size: 18px;
@@ -47,12 +43,13 @@
 
 .header_logo {
   justify-self: center;
+  
 }
 
 .header_logo_image {
   display: block;
-  min-width: 129.11px;
-  min-height: 104.65px;
+  width: 148px;
+  height: 105px;
 
 }
 
@@ -70,7 +67,7 @@
 .header_address {
   justify-self: end;
   text-align: left;
-  margin-right: 60px;
+  margin-right: 41px;
 }
 
 .address_link {
@@ -93,8 +90,9 @@
   background-position: center;
   color: #fff;
   text-transform: uppercase;
-  max-height: 757px;
-  
+  height: 757px;
+  padding: 165px 50px 50px;
+  margin-bottom: 185px;
 }
 
 .overlay {
@@ -105,11 +103,7 @@
 }
 
 .cover_title {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 40px;
-  padding: 165px 0 147px;
+  margin-bottom: 106px;
   position: relative;
   z-index: 1;
 }
@@ -118,48 +112,48 @@
 пятый раз, потому что она не хочет совпадать
  */
 .cover_text {
+  display: block;
   font-size: 100px;
   font-weight: 700;
-  line-height: 1;
+  line-height: 115%;
   letter-spacing: 30px;
   text-transform: uppercase;
 }
 
 .cover_text_left {
-  transform: translateX(-340px);
-  margin-top: 10px;
+  text-align: left;
+  margin-bottom: 20px;
+  
 }
 
 .cover_text_center {
-  transform: translateX(20px);
-  margin-top: -6px;
-}
+  text-align: center;
+  margin-bottom: 20px;
+
+  }
 
 .cover_text_right {
-  transform: translateX(325px);
-  text-align: left;
-  margin-top: -6px;
-}
+  text-align: right;
+  }
 
+.no_letter_spacing {
+  letter-spacing: 0;
+  }
 
 .cover_description {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 0 55px 0;
-  gap: 79px;
-  position: relative;
-  z-index: 1;
-  margin-top: -30px;
-}
+  gap: 85px;
+  }
 
 .cover_description_text {
   font-size: 22px;
   font-weight: 400;
   line-height: 28px;
   word-spacing: 18px;
-  padding-left: 30px;
-}
+  z-index: 1;
+  }
 
 .bet_button {
   width: 256px;
@@ -172,20 +166,19 @@
   font-weight: 500;
   text-transform: uppercase;
   cursor: pointer;
-  margin-right: 26px;
-  margin-top: -5px;
+  margin-right: 4px;
+  z-index: 1;
 }
 
 /* ===== ЛОТЫ ===== */
 
 .lots {
-   max-width: 1052px;
-  padding: 179px 0 0;
-  margin: 0 auto;
+  margin: 0 24px;
+  
 }
 
 .lots_heading {
-  margin: 0 0 26px 42px;
+  margin:  0 40px 25px;
   font-size: 40px;
   font-weight: 700;
   text-transform: uppercase;
@@ -195,15 +188,14 @@
   display: flex;
   list-style: none;
   gap: 25px;
-  margin: 28px 0 0;
-  padding: 0; 
+  margin: 0;
   flex-wrap: wrap;
 }
 
 .lots_card_list_item {
-  max-width: 334px;
+  
   flex: 0 0 334px; 
-  min-height: 590px;
+  min-height: 596px;
 }
 
 .card_link {
@@ -217,7 +209,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  padding: 51px 40px 48px;
+  padding: 47px 40px 48px;
   justify-content: space-between;
   background-size: cover;
   background-repeat: no-repeat;
@@ -239,7 +231,7 @@
 }
 
 .card_title {
-  margin: 0 0 16px;
+  margin: 0 auto;
   font-size: 22px;
   font-weight: 700;
   line-height: 120%;
@@ -258,8 +250,7 @@
 
 .lots_look_more_link {
   display: block;
-  margin: 33px 0 0 64px;
-  margin-left: 41px;
+  margin: 30px 0 0 40px;
   font-size: 20px;
   font-weight: 400;
   color: #000;
@@ -270,15 +261,15 @@
 /* ===== OБ АУКЦИОНЕ ===== */
 
 .about {
-  margin-top: 148px;
-  padding: 0;
-  display: grid;
-  grid-template-columns: 334px 1fr;
-  column-gap: 25px;
+  margin-top: 120px;
+  padding: 0 24px;
 }
 
 .about_column {
-  display: flex;
+  display: grid;
+  grid-template-columns: 240px 1fr;
+  column-gap: 72px;
+  padding: 34px 24px 0 47px;
 }
 
 .about_logo {
@@ -288,8 +279,6 @@
   width: 240px;
   height: 240px;
   display: flex;
-  margin-left: 50px;
-  margin-top: 4px;
   justify-content: center;
   align-items: center;
 }
@@ -297,16 +286,16 @@
 .about_logo_image {
   width: 148px;
   height: 114px;
-}
+  }
 
 .about_column_content {
+  display: flex;
   flex-direction: column;
   padding-top: 100px;
-  gap: 24px;
+  gap: 100px;
 }
 
 .about_title {
-  margin: 6px 0 0 2px;
   font-size: 40px;
   font-weight: 700;
   text-transform: uppercase;
@@ -318,27 +307,20 @@
   gap: 25px;
   font-size: 20px;
   line-height: 24px;
-  margin-top: 73px;
-}
+  }
 
 /* ===== ПОДВАЛ ===== */
 
 .footer {
   display: grid;
-  grid-template-columns: auto 1fr auto;
-  padding: 180px 0 88px;
-  column-gap: 140px;
+  grid-template-columns: 1fr max-content 1fr;
+  padding: 0 50px 80px;
+  margin-top: 183px;
   align-items: flex-start;
-}
-
-.footer_address {
-  margin-left: 30px;
 }
 
 .footer_menu_list {
   list-style: none;
-  margin: 0;
-  padding: 0;
   text-align: center;
 }
 
@@ -356,10 +338,9 @@
 .footer_social_list {
   display: flex;
   list-style: none;
+  justify-self: end;
   gap: 48px;
-  margin: 0 23px 0 0;
-  padding: 0;
-}
+  }
 
 .footer_social_icon {
   width: 48px;
